Fix flash being hidden behind elements
Fixes #84

--- a/app/scss/components.scss
+++ b/app/scss/components.scss
@@ -283,6 +283,7 @@ select:not([multiple]) {
 	bottom: 15px;
 	left: 0;
 	right: 0;
+	z-index: 1000;
 }
 
 #alerts .alert {
